# worldCup

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
worldcup_ai/: app.py  fetchers.py  models.py  predictor.py  service.py
worldcup_ai/static/: style.css
