[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldCup"
version = "0.1.0"
description = "Live 2026 FIFA World Cup data API and prediction web app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "jinja2>=3.1",
]

[project.scripts]
worldCup = "worldcup_ai.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
worldcup_ai = ["static/*.css"]

[tool.setuptools.packages.find]
include = ["worldcup_ai*"]
